--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -46,6 +46,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/2u/jobs/4371576002'>Job Application for Sr Director Business Intelligence at 2U</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/2u/jobs/4371587002'>Job Application for Sr Director Business Intelligence at 2U</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/113134/jobs/4346442002'>Job Application for Sr. Software Engineer (Business Intelligence Solutions & Architect) at Cast & Crew Entertainment Services, LLC</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
@@ -172,7 +180,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verse.workable.com/jobs/1071660/candidates/new'>Jobs: Head of Business Intelligence ... - Verse Technologies Inc</a></h5> 
+<h5><a href='https://verse.workable.com/jobs/1071660/candidates/new'>Jobs: Head of Business Intelligence ... - Verse Technologies Inc</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Head of Business Intelligence & Data Science at Verse 
 Technologies Inc.</p>
@@ -254,7 +262,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999691641639-business-intelligence-analyst'>Adevinta Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999691641639-business-intelligence-analyst'>Adevinta Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -331,7 +339,7 @@ Mavenlink?...</p>
 <p>3 days ago ... ABOUT THE TEAM: Business Science, which encompasses Digital Analytics, is 
 one of the fastest growing fields within MediaCom and focuses on (1) providing?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oCBv9fwB&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nlShOKwx'>WP Engine Careers - Business Intelligence, Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oCBv9fwB&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nlShOKwx'>WP Engine Careers - Business Intelligence, Developer</a></h5> 
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-19</p>
 <hr/>
@@ -363,7 +371,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://bitpesa.workable.com/j/9927083438'>BitPesa - Jobs: Business Intelligence Analyst - Sales - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bitpesa.workable.com/j/9927083438'>BitPesa - Jobs: Business Intelligence Analyst - Sales - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -399,7 +407,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Chicago Chicago</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://paymentsense-1.workable.com/j/3EE2BF3FA5'>Paymentsense - Jobs: Business Intelligence Analyst (12 month FTC, Maternity Cover) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://paymentsense-1.workable.com/j/3EE2BF3FA5'>Paymentsense - Jobs: Business Intelligence Analyst (12 month FTC, Maternity Cover) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -462,14 +470,6 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p>Posted on: 2019-07-17</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/mediacom-emea/job/o21yafwv'>MediaCom Careers - Business Intelligence Product Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-17</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/mediacom-emea/job/oR1yafwk'>MediaCom Careers - Senior Business Intelligence Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-17</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/mediacom-emea/job/ou1yafwX'>MediaCom Careers - Business Intelligence Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
