--- a/android-engineer.html
+++ b/android-engineer.html
@@ -162,11 +162,11 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">San Francisco, CA Vancouver, BC</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foodpandasingapore/jobs/1782767'>Job Application for Senior Android Engineer  at foodpanda Singapore</a></h5> 
+<h5><a href='https://boards.greenhouse.io/foodpandasingapore/jobs/1782767'>Job Application for Senior Android Engineer  at foodpanda Singapore</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/oAezafwh'>Trek Bicycle Careers - Android Mobile Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/oAezafwh'>Trek Bicycle Careers - Android Mobile Software Engineer</a></h5> 
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -203,7 +203,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p>5 days ago ... Grow as a developer via company support for coding bootcamps, conferences, 
 and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Deezer/743999691473309-lead-android-engineer-core-team'>Deezer Lead Android Engineer - Core Team | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Deezer/743999691473309-lead-android-engineer-core-team'>Deezer Lead Android Engineer - Core Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -211,7 +211,7 @@ and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?..
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='https://freelancer.workable.com/j/67F9C2608F'>Freelancer.com - Jobs: Android Software Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://freelancer.workable.com/j/67F9C2608F'>Freelancer.com - Jobs: Android Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -219,7 +219,7 @@ and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twitch/jobs/4342015002'>Job Application for Android Engineer  at Twitch</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4342015002'>Job Application for Android Engineer  at Twitch</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -227,7 +227,7 @@ and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/houzz/258d7b4c-9d59-4a6e-be7b-82bd10468bea'>Houzz - Junior Android Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/258d7b4c-9d59-4a6e-be7b-82bd10468bea'>Houzz - Junior Android Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -319,7 +319,7 @@ Evangelist - Mobile Studio Manchester; Streamline Performance Tool Developer.</p
 <p><span class="badge badge-light">Los Angeles Los Angeles</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/takescoop/4f382b09-4a8d-4376-9c78-a5ffac4ef73e'>Scoop - Senior Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/takescoop/4f382b09-4a8d-4376-9c78-a5ffac4ef73e'>Scoop - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -344,7 +344,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dice/jobs/4321461002'>Job Application for Senior Android Engineer at DICE</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dice/jobs/4321461002'>Job Application for Senior Android Engineer at DICE</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
